array.island.Island.scala.error
Erreur de compilation :
Island:2: error: value unary_! is not a member of Int
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = num.size; for (i<- 1 to a-1 ) {if (!num(i)==0)&&((num(i+1)-num(i))>0) {b = b +1}}; return b
                                                                                                     ^Island:2: error: not found: value &&
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = num.size; for (i<- 1 to a-1 ) {if (!num(i)==0)&&((num(i+1)-num(i))>0) {b = b +1}}; return b
                                                                                                                ^Island:2: error: not found: value b
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = num.size; for (i<- 1 to a-1 ) {if (!num(i)==0)&&((num(i+1)-num(i))>0) {b = b +1}}; return b
                                                                                                                                         ^Island:2: error: not found: value b
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = num.size; for (i<- 1 to a-1 ) {if (!num(i)==0)&&((num(i+1)-num(i))>0) {b = b +1}}; return b
                                                                                                                                                            ^